fixed spacing issue with nav from top of page

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,4 +1,6 @@
 html {
+  padding: 0;
+  margin: 0;
   /* color constants */
   --white: #ffffff;
   --black: #000000;
@@ -28,4 +30,6 @@ html {
 body {
   font-size: 62.5%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  padding: 0;
+  margin: 0;
 }
