--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: column;
   width: 100vw;
-  padding-top: 5rem;
 }
 
 .home-section {
